objects/SPOAuthTestReqHub__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>New SharePoint oAuth for Request Hub</description>
    <fields>
        <fullName>Access_Token_1__c</fullName>
        <label>Access Token 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Access_Token_2__c</fullName>
        <label>Access Token 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Access_Token_3__c</fullName>
        <label>Access Token 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Redirect_URI__c</fullName>
        <label>Redirect URI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Refresh_Token_1__c</fullName>
        <label>Refresh Token 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Refresh_Token_2__c</fullName>
        <label>Refresh Token 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SP OAuthTestReqHub</label>
</CustomObject>